Added question database with questions and answers

--- a/ApBC/backend/public/index.html
+++ b/ApBC/backend/public/index.html
@@ -8,8 +8,9 @@
 <body>
 <h1>Index</h1>
 <ul>
-    <li><a href="bok.html">Visa alla böcker</a></li>
+    <li><a href="bok.html">Visa allt i databasen</a></li>
     <li><a href="bok-form.html">Lägg till en bok</a></li>
+    <li><a href="questions.html">Show all questions</a></li>
 </ul>
 </body>
 </html>
